@@ -25,6 +25,7 @@ tasks.withType(JavaCompile).configureEach { // Java compile-time options:
 
 import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 Boolean isMacOS = DefaultNativePlatform.currentOperatingSystem.isMacOsX()
+Boolean enableNativeAccess = JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)
 
 tasks.withType(JavaExec).configureEach { // Java runtime options:
     if (isMacOS) {
@@ -35,6 +36,9 @@ tasks.withType(JavaExec).configureEach { // Java runtime options:
     //args '--verbose' // to enable additional log output
     classpath sourceSets.main.runtimeClasspath
     enableAssertions = true
+    if (enableNativeAccess) {
+        jvmArgs '--enable-native-access=ALL-UNNAMED' // suppress System::load() warning
+    }
     //jvmArgs '-verbose:gc'
     jvmArgs '-Xms4g', '-Xmx4g' // to enlarge the Java heap
     jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
